--- a/apps/lab04-photo-vue/package.json
+++ b/apps/lab04-photo-vue/package.json
@@ -18,6 +18,7 @@
     "@capacitor/core": "8.0.0",
     "@capacitor/filesystem": "^8.0.0",
     "@capacitor/haptics": "8.0.0",
+    "@capacitor/ios": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
     "@capacitor/preferences": "^8.0.0",
     "@capacitor/status-bar": "8.0.0",
@@ -40,7 +41,7 @@
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
     "typescript": "~5.9.0",
-    "vite": "^5.0.0",
+    "vite": "5.4.21",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
